...
    
    private func fetchListListItems() {
        
//        guard let searchUUID = uuid else {
        
        if uuid == nil {
            let defaultListString = "Inbox"
            let foundprojet = store.findDVList(byLabel: defaultListString)
            
            if foundprojet.isDVDefault, let _uuid = foundprojet.uuid {
                uuid = UUID(uuidString: _uuid.uuidString)
            }
        }
...
        
        let color = UIColor(rgba: rgba)
        
        let colorddotdotdot = dotdotdot.tint(color: color)
        let btn = UIBarButtonItem(image: colorddotdotdot, style: .plain, target: self, action: #selector(handleEditBtn))
        
        btn.accessibilityIdentifier = "taskitemlist.dotdotdot.btn"
        
        return btn
    }()
    
    fileprivate func setupDataAndNavBar() {
        // GRAB THE DATA
...
        let uimage = #imageLiteral(resourceName: "dvAdd002Icon")
        let coloreduiimage = uimage.tint(color: .white)
        
        btn.setImage(coloreduiimage, for: .normal)
        btn.buttonBackgroundColor = .whatsNewKitPurple
        btn.addTarget(self, action: #selector(handleNewDVTaskItemBtn), for: .touchDown)
        btn.accessibilityIdentifier = "dv_new_dvtaskitem"
        
        return btn
    }()
    
    fileprivate func setupFloatingBtn() {
        let btnSize = CGFloat(48)
...
    //    // forces on iphone to display as popover
    //    func adaptivePresentationStyle(for controller: UIPresentationController) -> UIModalPresentationStyle {
    //        return .none
    //    }
    
    override func tableView(_ tableView: UITableView, titleForHeaderInSection section: Int) -> String? {
        let thisWeekIdentifier = NSLocalizedString("This week", tableName: "Localizable", bundle: .main, value: "** DID NOT FIND This week **", comment: "")
        
        if let hasProject = list,
            let projectTitle = hasProject.title,
            projectTitle == thisWeekIdentifier {
            
            if items.count > 0 {
...
        let dateFormatter = DateFormatter()
        
        dateFormatter.dateFormat = "yyyyMMdd"
        
        let date = dateFormatter.date(from: _date)!
        
        let todayString = NSLocalizedString("Today", tableName: "Localizable", bundle: .main, value: "** DID NOT FIND Today ***", comment: "")
        let yesterdayString = NSLocalizedString("Yesterday", tableName: "Localizable", bundle: .main, value: "*** NOT FOUND YESTERDAY ***", comment: "")
        let tomorrowString = NSLocalizedString("Tomorrow", tableName: "Localizable", bundle: .main, value: "** DID NOT FIND Tomorrow **", comment: "")
        
        if Calendar.current.isDateInToday(date) {
            return todayString
        } else if (Calendar.current.isDateInYesterday(date)) {
...
