...
        super.viewWillAppear(animated)
        
        cookDatData()
        
//        let cancelBtn = UIBarButtonItem(barButtonSystemItem: .cancel, target: self, action: #selector(handleCancelButton))
        let cancelBtn = UIBarButtonItem.init(barButtonSystemItem: .cancel, target: self, action: #selector(handleCancelButton))
        cancelBtn.accessibilityIdentifier = "multi_entry_cancel_btn"
        
        let spacer = UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: nil, action: nil)
        let saveBtn = UIBarButtonItem(barButtonSystemItem: .save, target: self, action: #selector(handleSaveButton))
        
        navigationController?.isToolbarHidden = false
        //        setToolbarItems(items, animated: true)
...
//        numberToolbar.barStyle = .default
//        numberToolbar.theme_backgroundColor = "Global.backgroundColor"
        numberToolbar.theme_barStyle = "Global.toolbarStyle"
        numberToolbar.theme_tintColor = "Global.barTextColor"
        
        let doneBtn = UIBarButtonItem(image: #imageLiteral(resourceName: "dvKeyboardDownIcon001"), style: .plain, target: self, action: #selector(hideToolbarHandler))
        doneBtn.accessibilityIdentifier = "multicreate.keyboard.down.btn"
        
        let items: [UIBarButtonItem] = [
//            cancelButton,
//            UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: nil, action: nil),
//            saveButton,
            UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: nil, action: nil),
...
