...
    private func setupNavigation() {
        // remove shadow from navbar to blend into calendar
        self.navigationController?.navigationBar.setValue(true, forKey: "hidesShadow")
//        let cancelBTN = UIBarButtonItem.init(barButtonSystemItem: .cancel, target: self, action: #selector(cancel))
//        self.navigationItem.leftBarButtonItems = [cancelBTN]
//        let cancelBtn = UIBarButtonItem(barButtonSystemItem: .done, target: self, action: #selector(cancel))
//        cancelBtn.accessibilityIdentifier = "dailyvibes_dates_done"
//        let saveBtn = UIBarButtonItem(barButtonSystemItem: .save, target: self, action: #selector(handleSaveButton))
        
//        let spacer = UIBarButtonItem(barButtonSystemItem: .flexibleSpace, target: nil, action: nil)
//        let composeBtn = UIBarButtonItem(barButtonSystemItem: .compose, target: self, action: #selector(handleComposeBtn))
//        let btnsize = 48
////        let composeBtnImage = #imageLiteral(resourceName: "dvHeartNavBarIcon")
//        let composeBtn = AAFloatingButton(frame: CGRect(x: 0, y: 0, width: btnsize, height: btnsize))
//
//        composeBtn.setImage(#imageLiteral(resourceName: "dvHeartNavBarIcon"), for: .normal)
//        composeBtn.buttonBackgroundColor = .whatsNewKitRed
//        composeBtn.addTarget(self, action: #selector(handleComposeBtn), for: .touchDown)
//        composeBtn.accessibilityIdentifier = "dailyvibes_compose_new_entry"
//
//        composeBtn.widthAnchor.constraint(equalToConstant: CGFloat(btnsize)).isActive = true
//        composeBtn.heightAnchor.constraint(equalToConstant: CGFloat(btnsize)).isActive = true
        
//        composeBtn.transform = CGAffineTransform(translationX: 10, y: -10)
        
...
