...
                        <connections>
                            <outlet property="dataSource" destination="Toj-2D-Equ" id="2VZ-Wc-DCb"/>
                            <outlet property="delegate" destination="Toj-2D-Equ" id="gaW-de-d0a"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Daily Vibes" leftItemsSupplementBackButton="YES" largeTitleDisplayMode="never" id="NEe-C8-mgy">
                        <barButtonItem key="rightBarButtonItem" image="dvFilterIcon" style="plain" id="Cww-FG-c2L">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="main_more_filter_btn"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="bHr-ku-ldV" kind="show" identifier="TodoTaskItemFilters" id="70H-dv-Kj4"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
